--- a/style.css
+++ b/style.css
@@ -27,10 +27,11 @@ h1{
 }
 
 img{	
-	float:right;
-	margin-top:-339px;
-	width:501px;
-	height:312px;
+	float:left;
+	margin-top:-35.1%;
+	margin-left:39%;
+	width:56%;
+	height:43.3%;
 }
 
 #footer{
