--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1{
 }
 
 #container{
-	width:976px;
+	width:948px;
 	padding:0;
 	margin:0 auto;
 	background: #36393f;
@@ -27,9 +27,9 @@ h1{
 }
 
 img{	
-	float:right;
-	margin-top:-34.9%;
-	margin-left:30%;
+	float:left;
+	margin-top:-340px;
+	margin-left:350px;
 	width:56%;
 	height:43.5%;
 }
